--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="icon" type="image/png" href="/media/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="/media/favicon.svg" />
         <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="Dunreidy Admin" />
+        <meta name="apple-mobile-web-app-title" content="Admin" />
         <link rel="manifest" href="/media/site.webmanifest" />
     </head>
 
