--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
         <link rel="shortcut icon" href="media/favicon.svg" />
         <link rel="stylesheet" id="layout-styles-anchor" href="/splash-screen.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Symboint Energy Admin" />
